# wirelog

./: .clang-format  .clang-tidy  .clang-tidy-expected-checks.txt  .editorconfig  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISPATCH_ANALYSIS.md  DISPATCH_OPTIMIZATION.md  LICENSE.md  PERF_RESULTS_DISPATCH.md  README.md  SECURITY.md  config.h.in  crdt_benchmark_298.json  crdt_benchmark_300.json  meson.build  meson_options.txt  prd.json  progress.txt  uncrustify.cfg
.github/codeql/: codeql-config.yml
.github/workflows/: ci-main.yml  ci-pr.yml  ci.yml  codeql.yml  lint-main.yml  lint-pr.yml  lint.yml  pages.yml  (+2 more)
bench/: bench_col_layout.c  bench_compound.c  bench_flowlog.c  bench_util.h  datagen.c  meson.build
bench/data/: graph_100.csv  graph_100_weighted.csv  graph_10_weighted.csv
bench/data/andersen/: addressOf.csv  assign.csv  load.csv  store.csv
bench/data/crdt/: Insert_input.csv  Remove_input.csv
bench/data/csda/: edge.csv  nullEdge.csv
bench/data/cspa/: assign.csv  dereference.csv
bench/data/doop/: download.sh
bench/data/dyck/: close1.csv  close2.csv  open1.csv  open2.csv
bench/data/polonius/: cfg_edge.csv  child_path.csv  drop_of_var_derefs_origin.csv  loan_invalidated_at.csv  loan_issued_at.csv  loan_killed_at.csv  path_accessed_at_base.csv  path_assigned_at_base.csv  path_is_var.csv  path_moved_at_base.csv  subset_base.csv  use_of_var_derefs_origin.csv  var_defined_at.csv  var_dropped_at.csv  var_used_at.csv
bench/workloads/: andersen.dl  cc.dl  crdt.dl  csda.dl  cspa.dl  doop.dl  dyck2.dl  polonius.dl  reach.dl  sssp.dl  tc.dl
discussion/: FlowLog_Grammar_Analysis.md
docs/: 3d-ext-incremental-eval-roadmap.md  ADR-002-multi-workqueue-thread-safety.md  ARCHITECTURE.ko.md  ARCHITECTURE.md  BASELINE-284-DEBUG-REMOVED.md  CI-ARM64.md  COMPOUND_TERMS.md  Gemfile  LINTING.md  MIGRATION.md  NEON-PERFORMANCE.md  PERFORMANCE.md  PHASE-2A-CHECKLIST.md  PHASE-2A-OPEN-QUESTIONS.md  PHASE-2A-READY.md  PHASE-2A-RESEARCH-DELTA-QUERY.md  RDF_QUADS.md  README.md  RULE_LEVEL_FRONTIER.md  STRESS_BASELINE.md  SYNTAX.md  _config.yml  cli.md  examples.md  index.md  io-adapters.md  k-fusion-5-invariant-audit.md  reference.md  session-isolation-contract.md  tutorial.md
examples/08-delta-queries/: README.md  access_control.dl  delta_demo.c  example.csv  meson.build
examples/09-retraction-basics/: README.md  expected.txt  friendship.dl  golden_diff.py  meson.build  retract_demo.c
examples/10-recursive-under-update/: README.md  expected.txt  golden_diff.py  meson.build  reachability.dl  tc_demo.c
examples/11-time-evolution/: README.md  events.dl  expected.txt  golden_diff.py  meson.build  time_evolution_demo.c
rust/wirelog-dd/: Cargo.toml
rust/wirelog-dd/src/: dataflow.rs  expr.rs  ffi.rs  ffi_types.rs  lib.rs  plan_reader.rs  session.rs
scripts/: check_log_header_not_public.sh  setup_uncrustify_hook.py
tests/: bench_incremental_frontier.c  fpga_backend.c  fpga_backend.h  golden_diff_baseline.py  meson.build  mock_plugin_adapter.c  mock_plugin_adapter_bad_abi.c  test_2d_frontier_init.c  test_2d_frontier_skip.c  test_affected_rules.c  test_affected_strata.c  test_arrangement.c  test_arrangement_cache_reuse.c  test_arrangement_incremental_invalidation.c  test_arrangement_lru_eviction.c  test_bench_compound.c  test_bitwise_eval.c  test_bitwise_integration.c  test_bitwise_parser.c  test_bitwise_types.c  test_cli.c  test_cli_delta.c  test_col_rel_compound_schema.c  test_col_rel_deep_copy.c  test_col_rel_inline_storage.c  test_columnar_inline.c  test_compaction.c  test_compound_arena.c  test_compound_arena_freeze_cycle_stress.c  test_compound_arena_trace.c  test_compound_logging.c  test_compound_side_relation.c  test_consolidate_incremental_delta.c  test_consolidate_kway_merge.c  test_consolidate_partial_overlap.c  test_consolidation_cow.c  test_crc32_castagnoli.c  test_crc32_ethernet.c  test_crc32_hw_equivalence.c  test_cryptographic_hashes.c  (+143 more)
tests/baseline_snapshots/: int_edges_stdout.txt  sym_family_stdout.txt  tab_nodes_stdout.txt
tests/fixtures/baseline_input/: int_edges.dl  sym_family.csv  sym_family.dl  tab_nodes.dl
wirelog/: backend.h  backend_dd.c  crc32.c  crc32.h  exec_plan.h  exec_plan_gen.c  exec_plan_gen.h  meson.build  session.c  session.h  session_facts.c  string_ops.c  string_ops.h  thread.h  thread_c11.c  thread_msvc.c  thread_posix.c  wirelog-export.h  wirelog-internal.h  wirelog-ir.h  wirelog-optimizer.h  wirelog-parser.h  wirelog-types.h  wirelog.h  wl_easy.c  wl_easy.h  workqueue.c  workqueue.h
wirelog/arena/: arena.c  arena.h  compound_arena.c  compound_arena.h
wirelog/backend/: columnar_nanoarrow.c  columnar_nanoarrow.h  delta_pool.c
wirelog/backend/dd/: dd_ffi.h  dd_marshal.c  dd_plan.c  dd_plan.h  facts_loader.c
wirelog/cli/: driver.c  driver.h  main.c  plugin_loader.c  plugin_loader.h
wirelog/columnar/: arrangement.c  cache.c  columnar_nanoarrow.h  compound_side.c  compound_side.h  delta_pool.h  diff_arrangement.c  diff_arrangement.h  diff_trace.c  diff_trace.h  eval.c  frontier_epoch.c  handle_remap.c  handle_remap.h  handle_remap_apply.c  handle_remap_apply.h  handle_remap_apply_side.c  handle_remap_apply_side.h  handle_remap_design.md  internal.h  lftj.c  lftj.h  mem_ledger.c  mem_ledger.h  mobius.c  ops.c  ownership_flags_design.md  partition.c  progress.c  progress.h  relation.c  rotation_mvcc.c  rotation_pinned.c  rotation_standard.c  session.c  session_hash.c
wirelog/ffi/: dd_ffi.h  dd_marshal.c  dd_plan.c  dd_plan.h  facts_loader.c
wirelog/io/: csv_adapter.c  csv_reader.c  csv_reader.h  io_adapter.c  io_adapter.h  io_ctx.c  io_ctx_internal.h
wirelog/ir/: api.c  dd_plan.c  dd_plan.h  ir.c  ir.h  program.c  program.h  stratify.c  stratify.h
wirelog/parser/: ast.c  ast.h  lexer.c  lexer.h  parser.c  parser.h
wirelog/passes/: fusion.c  fusion.h  jpp.c  jpp.h  magic_sets.c  magic_sets.h  sip.c  sip.h  subsumption.c  subsumption.h
wirelog/util/: lockfree_queue.c  lockfree_queue.h  log.c  log.h  log_emit.c  log_testhook.c  meson.build
(+115 files in other folders)
