option(
  'embedded',
  type: 'boolean',
  value: false,
  description: 'Enable embedded mode (minimal dependencies, smaller binary)'
)

option(
  'ipc',
  type: 'combo',
  choices: ['disabled', 'enabled'],
  value: 'disabled',
  description: 'Enable Arrow IPC support (for data serialization and network transport)'
)

option(
  'threads',
  type: 'combo',
  choices: ['native', 'posix'],
  value: 'native',
  description: 'Threading backend: native (auto-detect C11/POSIX) or posix (force pthreads, required for TSan)'
)

option(
  'tests',
  type: 'boolean',
  value: true,
  description: 'Build and run tests'
)

option(
  'documentation',
  type: 'boolean',
  value: false,
  description: 'Build documentation (not yet implemented)'
)

option(
  'crc32_variant',
  type: 'combo',
  choices: ['ethernet', 'castagnoli'],
  value: 'ethernet',
  description: 'Default CRC-32 variant: ethernet (standard) or castagnoli (iSCSI)'
)

option(
  'io_plugin_dlopen',
  type: 'combo',
  choices: ['disabled', 'enabled'],
  value: 'disabled',
  description: 'Enable optional CLI plugin loader via dlopen (Issue #461). Excluded from Android/iOS.'
)

option(
  'mbedTLS',
  type: 'combo',
  choices: ['disabled', 'enabled', 'auto'],
  value: 'disabled',
  description: 'Use system-installed mbedTLS for cryptographic functions. auto=enabled if found, else disabled'
)

option(
  'wirelog_log_max_level',
  type: 'combo',
  choices: ['error', 'warn', 'info', 'debug', 'trace'],
  value: 'trace',
  description: 'Compile-time ceiling for WL_LOG() (Issue #287). Set to "error" in release for zero-cost disabled TRACE/DEBUG/INFO/WARN sites.'
)
